feat(Exercise 11) : Queue Completed